<resources>
    <!-- Ohjelman nimi; oletuksena näkyisi ActionBarissa otsikkona, mutta monessa Actionissa ko. otsikko on korvattu muulla -->
    <string name="app_name">joku hieno nimi</string>

    <!-- activity_main.xml / MainActivityn sisältö -->
    <string name="start_new">Aloita uuden erän skannaus</string>                <!-- "btAloitaUudenEranSkannaus" -buttonin teksti -->
    <string name="browse_and_edit">Selaa ja muokkaa aiempia eriä</string>       <!-- "btSelaaJaMuokkaa" -buttonin teksti -->
    <string name="other_activities">Muut toiminnot</string>                     <!-- "btMuutToiminnot" -buttonin teksti -->
    <string name="logo">Yrityksen logo</string>                                 <!-- "ivAloitussivunLogo" -imageViewin teksti -->
    <string name="menu">Valikko</string>                                        <!-- "ibAloitussivunValikko" -imageButtonin teksti -->
    <!-- Kolme pistettä -valikon sisältö -->
    <string name="settings">Asetukset</string>                                  <!-- "Asetukset"-vaihtoehdon teksti -->
    <string name="exit">Lopeta ohjelma</string>                                 <!-- "Lopeta ohjelma" -vaihtoehdon teksti -->

    <!-- activity_eran_nimeaminen.xml / eranNimeaminenActivityn sisältö -->
    <string name="cancel">Peruuta</string>                                      <!-- "btPeruuta" -buttonin teksti -->
    <string name="confirm">Jatka</string>                                       <!-- "btJatka" -buttonin teksti -->
    <string name="give_name">Anna uudelle erälle nimi:</string>                 <!-- "tvNimeaEra" -textViewin teksti -->
    <string name="hint_name">Kirjoita nimi...</string>                          <!-- "textAnnaNimi" -editTextin teksti -->

    <!-- activity_eran_skannaus.xml / eranSkannausActivityn sisältö -->
    <string name="start_scanning">Aktivoi skanneri</string>                 <!-- "Aloita skannaus" -buttonin teksti -->
    <string name="scanning_finished">Erä valmis</string>
    <string name="send_email">Lähetä erä sähköpostiin</string>
    <string name="list_product">Listaa tuote</string>
    <string name="lisaa_uusi_tuote_jarjestelmaan">Lisää uusi tuote järjestelmään</string>
    <string name="anna_viivakoodi">Anna viivakoodi...</string>
    <string name="anna_tuotenimi">Anna tuotenimi...</string>
    <string name="tallenna">Tallenna</string>
    <string name="anna_EAN_koodi" />
    <string name="anna_ean_koodi">Anna EAN koodi...</string>
    <string name="anna_tuotteen_nimi">Anna tuotteen nimi...</string>
    <string name="anna_tuotteen_hinta">Anna tuotteen hinta...</string>
    <string name="lis_uusi_tuote">Lisää uusi tuote</string>
    <string name="testi">Testi...</string>                           <!-- "Listaa tuote" -buttonin teksti -->

    <!-- activity_ohjelman_asetukset.xml / ohjelmanAsetuksetActivityn sisältö -->
    <string name="settings2">Ohjelman asetukset</string>
    <string name="theme">Teema</string>
    <string name="default_email">Oletussähköpostiosoite</string>
    <string name="edit_email">Muokkaa</string>
    <string name="test_email">Testaa sähköpostin toimivuus</string>
    <string name="lista">Lista</string>
    <string name="hinta">Hinta</string>
    <string name="hae_ean">Hae EAN...</string>
    <string name="tuote">Tuote</string>
    <string name="hae">Hae</string>
    <string name="p_ivit">Päivitä</string>
    <string name="poista">Poista</string>
    <string name="lis">Lisää</string>
    <string name="ean">EAN</string>
    <string name="tuotelistan_muokkaus">Tuotelistan muokkaus</string>
    <string name="asetukset">Asetukset</string>

    <string name="aiempiaEria">Skannattuja eriä tallennettuna: 0 kpl</string> <!-- Erien selaustilan yläosassa näkyvä yhteenveto -->
    <string name="naytaYhteenvetoina">Näytä tiedot yhteenvetoina</string>
</resources>