<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



    <Button
        android:id="@+id/btAloitaUudenEranSkannaus"
        android:layout_width="320dp"
        android:layout_height="70dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="404dp"
        android:layout_marginEnd="70dp"
        android:text="@string/start_new"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btSelaaJaMuokkaa"
        android:layout_width="320dp"
        android:layout_height="70dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="70dp"
        android:text="@string/browse_and_edit"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btMuutToiminnot"
        android:layout_width="320dp"
        android:layout_height="70dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="596dp"
        android:layout_marginEnd="70dp"
        android:text="@string/other_activities"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivAloitussivunLogo"
        android:layout_width="320dp"
        android:layout_height="415dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bc_logo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>